--- a/config/west.yml
+++ b/config/west.yml
@@ -10,6 +10,8 @@ manifest:
       url-base: https://github.com/GPeye
     - name: dhruvinsh
       url-base: https://github.com/dhruvinsh
+    - name: m165437 
+      url-base: https://github.com/M165437 
   projects:
     - name: eyelash_sofle
       url: https://github.com/a741725193/zmk-sofle
@@ -24,5 +26,8 @@ manifest:
     - name: zmk-tri-state
       remote: dhruvinsh
       revision: main
+    - name: nice-view-gem 
+      remote: m165437 
+      revision: main 
   self:
     path: config
